--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+# python
 __pycache__
+
+
+# vs code
 *workspace
+
+
+# node
+node_modules
+
+
+# vi
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+Session.vim
+Sessionx.vim
+.netrwhist
+*~
+tags
+[._]*.un~
 
